--- a/local.html
+++ b/local.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>local.html</title>
+    <p>webメモ帳</p>
 </head>
 <body>
     <p>サンプル6-03を開く際には、このファイルをservedアプリケーションにドラッグします。</p>
