--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!-- <title>Progate</title> -->
-    <!-- <link rel="stylesheet" href="stylesheet.css"> -->
-  </head>
-  <body>
-    <!-- ここにコードを書いていきましょう -->
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>2-01_console</title>
+<link href="../../_common/images/favicon.ico" rel="shortcut icon">
+<link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
+<link href="../../_common/css/style.css" rel="stylesheet">
+</head>
+<body>
+<header>
+<div class="container">
+<h1>コンソールにアウトプット</h1>
+<h2>開発ツールを開く、閉じる</h2>
+</div><!-- /.container -->
+</header>
+<main>
+<div class="container">
+<section>
     
-  </body>
+</section>
+</div><!-- /.container -->
+</main>
+<footer>
+<div class="container">
+<p>JavaScript Samples</p>
+</div><!-- /.container -->
+</footer>
+</body>
 </html>
