--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 </header>
 <main>
 <div class="container">
+    <p>こんにちは</p>
+    <p>今日は忙しかったね</p>
+    <p>さようなら</p>
+    <ul>
+        <li>Trumpet</li>
+        <li>Trombone</li>
+        <li>Euphnium</li>
+        <li>Horn</li>
+        <li>Tuba</li>
+    </ul>
 <section>
     
 </section>
