--- a/local.html
+++ b/local.html
@@ -3,12 +3,12 @@
 <head>  <!-- head=ページに関する情報 -->
 <meta charset="utf-8">
 <title>htmlのお勉強</title>
-<link href="OJT-git-main/_common/css/mdmemo.css" rel="stylesheet">
+<link href="../_common/css/mdmemo.css" rel="stylesheet">
 </head>
 
 <body>  <!-- body=実際に表示したい内容 -->
     <header>
-        <img src="OJT-git-main/_common/images/favicon.ico">
+        <img src="../_common/images/favicon.ico">
         <div class="header-logo">webメモ帳</div>
         <div class="header-list">
             <ul>
